@@ -4,8 +4,11 @@ import com.jg.poms.domain.brand.Brand;
 import com.jg.poms.domain.category.Category;
 import com.jg.poms.domain.product.Product;
 import com.jg.poms.domain.product.productimage.ProductImage;
+import com.jg.poms.domain.review.Review;
+import com.jg.poms.dto.review.response.ReviewResponse;
 import lombok.Getter;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -21,6 +24,7 @@ public class ProductResponse {
 	private boolean deleteYn;
 	private List<ProductImage> productImageList;
 	private String thumbnailImageFilePath;
+	private List<ReviewResponse> productReviewList;
 
 	public ProductResponse(Product product){
 		this.productIdx = product.getProductIdx();
@@ -30,25 +34,23 @@ public class ProductResponse {
         this.code = product.getCode();
         this.price = product.getPrice();
 		this.deleteYn = product.isDeleteYn();
+
         this.productImageList = product.getProductImageList();
 		List<ProductImage> productImages = product.getProductImageList().stream()
 									.filter(image -> image.getProductImageType().equals("thumbnailType"))
 									.filter(image -> image.getDisplayOrder().equals("1"))
-									.collect(Collectors.toList());
+									.toList();
 		this.thumbnailImageFilePath = productImages.get(0).getFilePath();
-		/*
-		System.out.println("size: "+productImages.size());
-		System.out.println("========================================================================");
-		if(productImages != null && productImages.size() !=0 ){
-			System.out.println("타입: "+productImages.get(0).getProductImageType()+", 순서: "+productImages.get(0).getDisplayOrder());
-			System.out.println(productImages.get(0).getFilePath());
-		}
-		else{
-			System.out.println("얘가 0: " + product.getProductIdx());
-		}
-		System.out.println("끝========================================================================");
-		 */
-	}
 
+		this.productReviewList = new ArrayList<>();
+		List<Review> reviews = product.getProductReviewList().stream()
+				.filter(review -> review.isDeleteYn() != true)
+				.toList();
+		if(product.getProductReviewList() != null){
+			for(Review review : reviews) {
+				this.productReviewList.add(new ReviewResponse(review));
+			}
+		}
+	}
 
 }
